Fix: 修复manifest里权限在新版本chrome里的错误

--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,5 @@
       "16": "chouti121.png",
       "48": "chouti121.png"
    },
-    "content_security_policy": "script-src 'unsafe-eval'; object-src 'self'"
+    "content_security_policy": "script-src 'unsafe-eval' object-src 'self'"
 }
